--- a/Configurations/Engine.ini
+++ b/Configurations/Engine.ini
@@ -85,7 +85,7 @@ r.Shadow.CSM.MaxCascades=5
 r.Shadow.SkeletalMeshLODBias=0.5
 r.Shadow.AllShadowDrawcallMax=2000
 r.MeshDrawCommands.ShadowPerBatchDrawcallMax=3000
-r.DetailMode=2
+r.DetailMode=1
 r.MaterialQualityLevel=2
 r.KuroMaterialQualityLevel=2
 r.ViewDistanceScale=5
@@ -113,6 +113,8 @@ r.TemporalAA.MobileStaticFrameWeight=0.25
 r.TemporalAA.MobileFrameWeight=0.25
 r.FidelityFX.FSR.SecondaryUpscale=1
 r.FidelityFX.FSR.RCAS.Sharpness=1.0
+FX.BatchAsync=1
+FX.EarlyScheduleAsync=1
 r.MobileLightShaft.DownSampleFactor=0
 r.Kuro.Foliage.MobileNearCullDistanceMax=5000
 r.Kuro.Foliage.MobileMiddleCullDistanceMax=10000
