--- a/Configurations/Engine.ini
+++ b/Configurations/Engine.ini
@@ -59,7 +59,7 @@ Paths=../../../Engine/Plugins/GSR/Content
 Paths=../../../Engine/Plugins/Runtime/Intel/XeSS/Content
 Paths=../../../Engine/Plugins/Runtime/Nvidia/NRD/Content
 
-[SystemSettings]
+[/Script/Engine.RendererSettings]
 r.KuroMobile.LenseFlareQuality=3
 r.ShadowQuality=3
 r.BillboardShadows=1
